<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_game1"
            android:checkable="false"
            android:title="@string/game1_name" />
        <item
            android:id="@+id/nav_menu_game2"
            android:checkable="false"
            android:title="@string/game2_name" />
        <item
            android:id="@+id/nav_menu_game3"
            android:checkable="false"
            android:title="@string/game3_name" />
        <item
            android:id="@+id/nav_menu_game4"
            android:checkable="false"
            android:title="@string/game4_name" />
        <item
            android:id="@+id/nav_menu_game5"
            android:checkable="false"
            android:title="@string/game5_name" />
        <item
            android:id="@+id/nav_menu_top_players"
            android:checkable="false"
            android:title="@string/menu_top_players" />
        <item
            android:id="@+id/nav_menu_settings"
            android:checkable="false"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_menu_logout"
            android:checkable="false"
            android:title="@string/menu_logout" />
    </group>

</menu>