<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".gameBasic.caroGame.CaroGameActivity">

    <item android:id="@+id/action_sound" android:icon="@drawable/ic_volume_off_white_24dp"
        android:orderInCategory="1" app:showAsAction="ifRoom"
        android:title="@string/todo" />
    <item
        android:id="@+id/menu_play_with_com"
        android:orderInCategory="100"
        android:title="@string/menu_caro_game_play_with_computer"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_dual_play"
        android:orderInCategory="100"
        android:title="@string/menu_caro_game_dual_play"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_information"
        android:orderInCategory="100"
        android:title="@string/menu_information"
        app:showAsAction="collapseActionView" />

</menu>